--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Informatique Cerdagne – Dépannage, Conseil & Relation Humaine</title>
+  <title>Informatique Cerdagne</title>
   <meta name="description" content="Dépannage, sécurité, sauvegardes, formations, création de site et conseils en Cerdagne. Un service technique, patient et pédagogue." />
 
   <link rel="preconnect" href="https://cdn.jsdelivr.net" />
