--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
 
   <!-- NAV -->
   <nav class="nav" aria-label="Navigation principale">
-    <a href="#hero" class="logo btn-magnet" data-scrolllink aria-label="Haut de page">
+    <a href="#hero" class="logo btn-magnet" data-scrolllink aria-label="Haut de page" data-magnet>
       <img src="img/logo-cerdagne.png" class="logo__img" alt="Informatique Cerdagne" />
     </a>
     <div class="nav__links">
-      <a data-scrolllink href="#demarche">Démarche</a>
-      <a data-scrolllink href="#prestations">Prestations</a>
-      <a data-scrolllink href="#expertise">Expertise</a>
-      <a data-scrolllink href="#avis">Avis</a>
-      <a data-scrolllink href="#contact" class="btn btn-primary btn-magnet">Contact</a>
+      <a data-scrolllink href="#demarche" data-magnet>Démarche</a>
+      <a data-scrolllink href="#prestations" data-magnet>Prestations</a>
+      <a data-scrolllink href="#expertise" data-magnet>Expertise</a>
+      <a data-scrolllink href="#avis" data-magnet>Avis</a>
+      <a data-scrolllink href="#contact" class="btn btn-primary btn-magnet" data-magnet>Contact</a>
     </div>
     <div class="progress" aria-hidden="true"><span></span></div>
   </nav>
@@ -68,15 +68,19 @@
 
         <!-- Soleil -->
         <g id="sun">
-          <g id="sunRays" aria-hidden="true">
-            <line x1="0" y1="-100" x2="0" y2="-140" stroke="#F7C600" stroke-width="10" stroke-linecap="round"/>
-            <line x1="0" y1="100"  x2="0" y2="140"  stroke="#F7C600" stroke-width="10" stroke-linecap="round" transform="rotate(180)"/>
-            <line x1="-100" y1="0" x2="-140" y2="0" stroke="#F7C600" stroke-width="10" stroke-linecap="round" transform="rotate(180)"/>
-            <line x1="100"  y1="0" x2="140"  y2="0" stroke="#F7C600" stroke-width="10" stroke-linecap="round"/>
-            <line x1="-70" y1="-70" x2="-98" y2="-98" stroke="#F7C600" stroke-width="10" stroke-linecap="round"/>
-            <line x1="70"  y1="70"  x2="98"  y2="98"  stroke="#F7C600" stroke-width="10" stroke-linecap="round"/>
-            <line x1="-70" y1="70"  x2="-98" y2="98"  stroke="#F7C600" stroke-width="10" stroke-linecap="round"/>
-            <line x1="70"  y1="-70" x2="98"  y2="-98" stroke="#F7C600" stroke-width="10" stroke-linecap="round"/>
+          <g id="sunRays" stroke="#F7C600" stroke-width="10" stroke-linecap="round">
+            <line x1="0" y1="-80" x2="0" y2="-120"/>
+            <line x1="0" y1="-80" x2="0" y2="-120" transform="rotate(30)"/>
+            <line x1="0" y1="-80" x2="0" y2="-120" transform="rotate(60)"/>
+            <line x1="0" y1="-80" x2="0" y2="-120" transform="rotate(90)"/>
+            <line x1="0" y1="-80" x2="0" y2="-120" transform="rotate(120)"/>
+            <line x1="0" y1="-80" x2="0" y2="-120" transform="rotate(150)"/>
+            <line x1="0" y1="-80" x2="0" y2="-120" transform="rotate(180)"/>
+            <line x1="0" y1="-80" x2="0" y2="-120" transform="rotate(210)"/>
+            <line x1="0" y1="-80" x2="0" y2="-120" transform="rotate(240)"/>
+            <line x1="0" y1="-80" x2="0" y2="-120" transform="rotate(270)"/>
+            <line x1="0" y1="-80" x2="0" y2="-120" transform="rotate(300)"/>
+            <line x1="0" y1="-80" x2="0" y2="-120" transform="rotate(330)"/>
           </g>
           <circle r="60" fill="#F7C600"></circle>
           <circle class="eyeL" cx="-20" cy="-10" r="6" fill="#111"/>
@@ -113,8 +117,8 @@
         </h1>
         <p class="hero__sub">Amoureux de la relation client, c'est un grand plaisir de vous accompagner !</p>
         <div class="cta">
-          <a data-scrolllink href="#contact" class="btn btn-primary btn-magnet">Demander un devis</a>
-          <a data-scrolllink href="#prestations" class="btn btn-ghost btn-magnet">Voir les prestations</a>
+          <a data-scrolllink href="#contact" class="btn btn-primary btn-magnet" data-magnet>Demander un devis</a>
+          <a data-scrolllink href="#prestations" class="btn btn-ghost btn-magnet" data-magnet>Voir les prestations</a>
         </div>
         <p class="hero__credits small">Site statique rapide, sans prise en main à distance.</p>
       </div>
@@ -151,12 +155,12 @@
       <h2 id="h-prestations" data-split>Prestations <span class="accent">sur-mesure</span></h2>
       <p class="lead">Amélioration des performances & protection • Installations (Windows, Linux, macOS, composants) • Périphériques • Sites web & SEO local • Applications de gestion • Sauvegardes & récupération • Aide en ligne • Formation</p>
       <div class="grid-cards">
-        <article class="service"><h3>🔧 Dépannage & Optimisation</h3><p>Diagnostic, réparations, SSD/RAM, optimisation système, virus & malwares.</p></article>
-        <article class="service"><h3>🛡️ Sécurité & Sauvegardes</h3><p>Antivirus, pare-feu, chiffrement, stratégies locales & cloud.</p></article>
-        <article class="service"><h3>📦 Installations</h3><p>Windows, Linux, macOS, pilotes, imprimantes, écrans, NAS.</p></article>
-        <article class="service"><h3>💡 Conseils & Achat</h3><p>Accompagnement objectif pour choisir le matériel adapté.</p></article>
-        <article class="service"><h3>🖥️ Sites & Visibilité</h3><p>Sites statiques rapides, référencement local, réseaux sociaux.</p></article>
-        <article class="service"><h3>📚 Formation</h3><p>Initiation & prise en main à domicile ou à distance.</p></article>
+        <article class="service" data-magnet><h3>🔧 Dépannage & Optimisation</h3><p>Diagnostic, réparations, SSD/RAM, optimisation système, virus & malwares.</p></article>
+        <article class="service" data-magnet><h3>🛡️ Sécurité & Sauvegardes</h3><p>Antivirus, pare-feu, chiffrement, stratégies locales & cloud.</p></article>
+        <article class="service" data-magnet><h3>📦 Installations</h3><p>Windows, Linux, macOS, pilotes, imprimantes, écrans, NAS.</p></article>
+        <article class="service" data-magnet><h3>💡 Conseils & Achat</h3><p>Accompagnement objectif pour choisir le matériel adapté.</p></article>
+        <article class="service" data-magnet><h3>🖥️ Sites & Visibilité</h3><p>Sites statiques rapides, référencement local, réseaux sociaux.</p></article>
+        <article class="service" data-magnet><h3>📚 Formation</h3><p>Initiation & prise en main à domicile ou à distance.</p></article>
       </div>
     </div>
   </section>
@@ -164,7 +168,7 @@
   <!-- EXPERTISE -->
   <section id="expertise" class="section expertise container" aria-labelledby="h-expertise">
     <div class="split reverse">
-      <div class="card glow">
+      <div class="card glow" data-magnet>
         <h3>Technique</h3>
         <ul class="tick">
           <li>Matériel (Windows, macOS, Linux, périphériques)</li>
@@ -200,9 +204,9 @@
       <h2 id="h-contact" data-split>On démarre ? <span class="accent">J'ai hâte.</span></h2>
       <p class="lead">Intervention à domicile en Cerdagne, conseils et accompagnement sur-mesure.</p>
       <div class="contact__grid">
-        <a class="cta-tile btn-magnet" href="tel:+33698998001"><span>📞</span><strong>06&nbsp;98&nbsp;99&nbsp;80&nbsp;01</strong><small>Appel direct</small></a>
-        <a class="cta-tile btn-magnet" href="mailto:contact@informatique-cerdagne.fr"><span>✉️</span><strong>contact@informatique-cerdagne.fr</strong><small>Réponse rapide</small></a>
-        <a class="cta-tile btn-magnet" href="https://www.google.com/maps/search/?api=1&query=Cerdagne" target="_blank" rel="noopener"><span>📍</span><strong>Cerdagne</strong><small>Zone d’intervention</small></a>
+        <a class="cta-tile btn-magnet" href="tel:+33698998001" data-magnet><span>📞</span><strong>06&nbsp;98&nbsp;99&nbsp;80&nbsp;01</strong><small>Appel direct</small></a>
+        <a class="cta-tile btn-magnet" href="mailto:contact@informatique-cerdagne.fr" data-magnet><span>✉️</span><strong>contact@informatique-cerdagne.fr</strong><small>Réponse rapide</small></a>
+        <a class="cta-tile btn-magnet" href="https://www.google.com/maps/search/?api=1&query=Cerdagne" target="_blank" rel="noopener" data-magnet><span>📍</span><strong>Cerdagne</strong><small>Zone d’intervention</small></a>
       </div>
     </div>
   </section>
@@ -215,9 +219,9 @@
         <p>© <span id="year"></span> – Tous droits réservés. Site statique ultra-rapide.</p>
       </div>
       <nav class="footer__links" aria-label="Liens de pied de page">
-        <a data-scrolllink href="#hero">Haut de page</a>
-        <a href="mailto:contact@informatique-cerdagne.fr">Email</a>
-        <a href="tel:+33698998001">Téléphone</a>
+        <a data-scrolllink href="#hero" data-magnet>Haut de page</a>
+        <a href="mailto:contact@informatique-cerdagne.fr" data-magnet>Email</a>
+        <a href="tel:+33698998001" data-magnet>Téléphone</a>
       </nav>
     </div>
   </footer>
