more magnets + pink neon

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       </svg>
 
       <div class="hero__content container">
-        <div class="hero__badge">Informatique Cerdagne</div>
+        <div class="hero__badge" data-magnet>Informatique Cerdagne</div>
         <h1 class="speed-title">
           Le service informatique à domicile <span class="accent">avec le sourire</span>
           <span class="trail" aria-hidden="true"></span>
@@ -132,10 +132,10 @@
         <h2 id="h-demarche" data-split>Ma <span class="accent">démarche</span></h2>
         <p class="lead">Je conçois le service comme une relation humaine : <strong>sourire, empathie, patience, persévérance, respect, ponctualité, générosité</strong>, <strong>transparence, pédagogie, soin, adaptabilité</strong>.</p>
         <ul class="values">
-          <li><span>😊</span> Sourire & pédagogie</li>
-          <li><span>🕐</span> Ponctualité & fiabilité</li>
-          <li><span>🧩</span> Adaptabilité & clarté</li>
-          <li><span>🛡️</span> Transparence & sécurité</li>
+          <li data-magnet><span>😊</span> Sourire & pédagogie</li>
+          <li data-magnet><span>🕐</span> Ponctualité & fiabilité</li>
+          <li data-magnet><span>🧩</span> Adaptabilité & clarté</li>
+          <li data-magnet><span>🛡️</span> Transparence & sécurité</li>
         </ul>
       </div>
       <div class="card profile">
@@ -171,29 +171,29 @@
       <div class="card glow" data-magnet>
         <h3>Technique</h3>
         <ul class="tick">
-          <li>Matériel (Windows, macOS, Linux, périphériques)</li>
-          <li>Réseaux, sauvegardes, sécurité</li>
-          <li>Sites statiques (HTML/CSS/JS), performance</li>
-          <li>Automatisation & pédagogie d’usage</li>
+          <li data-magnet>Matériel (Windows, macOS, Linux, périphériques)</li>
+          <li data-magnet>Réseaux, sauvegardes, sécurité</li>
+          <li data-magnet>Sites statiques (HTML/CSS/JS), performance</li>
+          <li data-magnet>Automatisation & pédagogie d’usage</li>
         </ul>
       </div>
       <div>
         <h2 id="h-expertise" data-split>Expertise <span class="accent">tech + humaine</span></h2>
         <p class="lead">Au-delà de la technique, je prends le temps d’expliquer, de rassurer et de rendre l’outil <strong>utile</strong>. Objectif : votre autonomie.</p>
-        <div class="chips"><span>Transparence</span><span>Patience</span><span>Clarté</span><span>Suivi</span><span>Résultats</span></div>
+        <div class="chips"><span data-magnet>Transparence</span><span data-magnet>Patience</span><span data-magnet>Clarté</span><span data-magnet>Suivi</span><span data-magnet>Résultats</span></div>
       </div>
     </div>
   </section>
 
   <!-- AVIS -->
   <section id="avis" class="section avis" aria-labelledby="h-avis">
-    <div class="container">
+    <div class="container" data-magnet>
       <h2 id="h-avis" data-split>Votre satisfaction : <span class="accent">ma plus grande récompense !</span></h2>
       <p class="lead">Avis Google de mes clients (JSON local — API possible plus tard).</p>
       <div class="reviews" aria-live="polite"></div>
       <div class="reviews__controls" aria-controls="reviews">
-        <button class="prev" type="button" aria-label="Avis précédent">←</button>
-        <button class="next" type="button" aria-label="Avis suivant">→</button>
+        <button class="prev" type="button" aria-label="Avis précédent" data-magnet>←</button>
+        <button class="next" type="button" aria-label="Avis suivant" data-magnet>→</button>
       </div>
     </div>
   </section>
