more magnets html

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
           <li data-magnet><span>🛡️</span> Transparence & sécurité</li>
         </ul>
       </div>
-      <div class="card profile">
+      <div class="card profile" data-magnet>
         <img src="img/profile.jpg" alt="Rémy Roger – Informatique Cerdagne" loading="lazy" />
         <div class="profile__txt">
           <h3>Rémy ROGER</h3>
@@ -168,7 +168,7 @@
   <!-- EXPERTISE -->
   <section id="expertise" class="section expertise container" aria-labelledby="h-expertise">
     <div class="split reverse">
-      <div class="card glow" data-magnet>
+      <div class="card glow">
         <h3>Technique</h3>
         <ul class="tick">
           <li data-magnet>Matériel (Windows, macOS, Linux, périphériques)</li>
@@ -187,10 +187,10 @@
 
   <!-- AVIS -->
   <section id="avis" class="section avis" aria-labelledby="h-avis">
-    <div class="container" data-magnet>
+    <div class="container">
       <h2 id="h-avis" data-split>Votre satisfaction : <span class="accent">ma plus grande récompense !</span></h2>
       <p class="lead">Avis Google de mes clients (JSON local — API possible plus tard).</p>
-      <div class="reviews" aria-live="polite"></div>
+      <div class="reviews" aria-live="polite" data-magnet></div>
       <div class="reviews__controls" aria-controls="reviews">
         <button class="prev" type="button" aria-label="Avis précédent" data-magnet>←</button>
         <button class="next" type="button" aria-label="Avis suivant" data-magnet>→</button>
