index.html content

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Informatique Cerdagne</title>
-  <meta name="description" content="Dépannage, sécurité, sauvegardes, formations, création de site et conseils en Cerdagne. Un service technique, patient et pédagogue." />
+  <meta name="description" content="Dépannage, sécurité, sauvegardes, formations, création de site et conseils en Cerdagne. Un service informatique, patient et pédagogue." />
 
   <!-- CSS -->
   <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin />
@@ -19,10 +19,6 @@
   <script defer src="js/main.js"></script>
 </head>
 <body>
-
-  <!-- Transition overlay -->
-  <div id="pageTransition" aria-hidden="true"></div>
-
   <!-- PRELOADER -->
   <div id="preloader" aria-hidden="true">
     <div class="spinner" aria-label="Chargement">
@@ -49,7 +45,6 @@
   <!-- HERO -->
   <header id="hero" class="section hero" aria-label="Introduction">
     <div class="hero__pin">
-
       <!-- Scène SVG (ciel/route/soleil/voiture) -->
       <svg class="scene" viewBox="0 0 1440 810" preserveAspectRatio="xMidYMid meet" role="img" aria-label="Montagnes stylisées, route et soleil">
         <defs>
@@ -117,7 +112,7 @@
           <a data-scrolllink href="#contact" class="btn btn-primary btn-magnet" data-magnet>Demander un devis</a>
           <a data-scrolllink href="#prestations" class="btn btn-ghost btn-magnet" data-magnet>Voir les prestations</a>
         </div>
-        <p class="hero__credits small">Site statique rapide, sans prise en main à distance.</p>
+        <p class="hero__credits small">Pour les professionnels & particuliers. Ma mission : vous faciliter la vie.</p>
       </div>
     </div>
   </header>
@@ -127,7 +122,9 @@
     <div class="split">
       <div>
         <h2 id="h-demarche" data-split>Ma <span class="accent">démarche</span></h2>
-        <p class="lead">Je conçois le service comme une relation humaine : <strong>sourire, empathie, patience, persévérance, respect, ponctualité, générosité</strong>, <strong>transparence, pédagogie, soin, adaptabilité</strong>.</p>
+        <p class="lead">Je conçois le service comme une relation humaine : empathie, écoute, patience, persévérance, respect, générosité, soin.</p>
+        <p class="lead">Suite à mon intervention, assistance, réparation ou dépannage, je souhaite que vous ayez le sentiment que l’informatique vous facilite la vie et vous aide au quotidien.</p>
+        <p class="lead">Je prends le temps de vous expliquer et de vous former afin que vous puissiez vous sentir à l'aise avec l'informatique.</p>
         <ul class="values">
           <li data-magnet><span>😊</span> Sourire & pédagogie</li>
           <li data-magnet><span>🕐</span> Ponctualité & fiabilité</li>
@@ -150,14 +147,14 @@
   <section id="prestations" class="section prestations" aria-labelledby="h-prestations">
     <div class="container">
       <h2 id="h-prestations" data-split>Prestations <span class="accent">sur-mesure</span></h2>
-      <p class="lead">Amélioration des performances & protection • Installations (Windows, Linux, macOS, composants) • Périphériques • Sites web & SEO local • Applications de gestion • Sauvegardes & récupération • Aide en ligne • Formation</p>
+      <p class="lead">Vous ne trouvez une des prestations que vous cherchez ? Cela doit juste être un oubli : Contactez-moi 😉</p>
       <div class="grid-cards">
-        <article class="service" data-magnet><h3>🔧 Dépannage & Optimisation</h3><p>Diagnostic, réparations, SSD/RAM, optimisation système, virus & malwares.</p></article>
-        <article class="service" data-magnet><h3>🛡️ Sécurité & Sauvegardes</h3><p>Antivirus, pare-feu, chiffrement, stratégies locales & cloud.</p></article>
-        <article class="service" data-magnet><h3>📦 Installations</h3><p>Windows, Linux, macOS, pilotes, imprimantes, écrans, NAS.</p></article>
-        <article class="service" data-magnet><h3>💡 Conseils & Achat</h3><p>Accompagnement objectif pour choisir le matériel adapté.</p></article>
-        <article class="service" data-magnet><h3>🖥️ Sites & Visibilité</h3><p>Sites statiques rapides, référencement local, réseaux sociaux.</p></article>
-        <article class="service" data-magnet><h3>📚 Formation</h3><p>Initiation & prise en main à domicile ou à distance.</p></article>
+        <article class="service" data-magnet><h3>🔧 Dépannage & Optimisation</h3><p>Nettoyage, Diagnostic complet, Branchements divers, Connexions imprimantes & scanners</p></article>
+        <article class="service" data-magnet><h3>🛡️ Sécurité & Sauvegardes</h3><p>Sécurisation Tri de vos fichiers, sauvegardes locales & cloud.</p></article>
+        <article class="service" data-magnet><h3>📦 Installations & Personnalisation</h3><p>Mise en fonction Windows, Linux, macOS - Configuration PC, Tablette, Smartphone</p></article>
+        <article class="service" data-magnet><h3>💡 Conseils & Achat</h3><p>Recommandations sur-mesure pour choisir le matériel adapté à vos besoins</p></article>
+        <article class="service" data-magnet><h3>🖥️ Sites & Visibilité</h3><p>Sites web, référencement local, réseaux sociaux, Stratégie Marketing</p></article>
+        <article class="service" data-magnet><h3>📚 Formation</h3><p>Consulting / Audit - Cours d'initiation, conseils et aide à prise en main à domicile.</p></article>
       </div>
     </div>
   </section>
@@ -166,17 +163,18 @@
   <section id="expertise" class="section expertise container" aria-labelledby="h-expertise">
     <div class="split reverse">
       <div class="card glow">
-        <h3>Technique</h3>
+        <h3>Expertise</h3>
         <ul class="tick">
-          <li data-magnet>Matériel (Windows, macOS, Linux, périphériques)</li>
-          <li data-magnet>Réseaux, sauvegardes, sécurité</li>
-          <li data-magnet>Sites statiques (HTML/CSS/JS), performance</li>
-          <li data-magnet>Automatisation & pédagogie d’usage</li>
+          <li data-magnet>Programmation web & applicatives (automatisation des tâches répétitives)</li>
+          <li data-magnet>Cybersécurité, Récupération de données & Sauvegardes</li>
+          <li data-magnet>Optimisation des performances & Autonomie</li>
+          <li data-magnet>Spécialiste de la recommandation d'achat désintéressée</li>
+          <li data-magnet>Bonus : Coach Consultant Certifié - Professionnel de l'accompagnement</li>
         </ul>
       </div>
       <div>
         <h2 id="h-expertise" data-split>Expertise <span class="accent">tech + humaine</span></h2>
-        <p class="lead">Au-delà de la technique, je prends le temps d’expliquer, de rassurer et de rendre l’outil <strong>utile</strong>. Objectif : votre autonomie.</p>
+        <p class="lead">Au-delà de la technique, je prends le temps d'écouter, d’expliquer et de rassurer. Objectif : votre autonomie.</p>
         <div class="chips"><span data-magnet>Transparence</span><span data-magnet>Patience</span><span data-magnet>Clarté</span><span data-magnet>Suivi</span><span data-magnet>Résultats</span></div>
       </div>
     </div>
@@ -186,7 +184,7 @@
   <section id="avis" class="section avis" aria-labelledby="h-avis">
     <div class="container">
       <h2 id="h-avis" data-split>Votre satisfaction : <span class="accent">ma plus grande récompense !</span></h2>
-      <p class="lead">Avis Google de mes clients (JSON local — API possible plus tard).</p>
+      <p class="lead">Avis Google de mes clients.</p>
       <div class="reviews" aria-live="polite" data-magnet></div>
       <div class="reviews__controls" aria-controls="reviews">
         <button class="prev" type="button" aria-label="Avis précédent" data-magnet>←</button>
@@ -199,11 +197,11 @@
   <section id="contact" class="section contact" aria-labelledby="h-contact">
     <div class="container">
       <h2 id="h-contact" data-split>On démarre ? <span class="accent">J'ai hâte.</span></h2>
-      <p class="lead">Intervention à domicile en Cerdagne, conseils et accompagnement sur-mesure.</p>
+      <p class="lead">Intervention à domicile & sur rendez-vous exclusivement, conseils et accompagnement sur-mesure.</p>
       <div class="contact__grid">
         <a class="cta-tile btn-magnet" href="tel:+33698998001" data-magnet><span>📞</span><strong>06&nbsp;98&nbsp;99&nbsp;80&nbsp;01</strong><small>Appel direct</small></a>
         <a class="cta-tile btn-magnet" href="mailto:contact@informatique-cerdagne.fr" data-magnet><span>✉️</span><strong>contact@informatique-cerdagne.fr</strong><small>Réponse rapide</small></a>
-        <a class="cta-tile btn-magnet" href="https://www.google.com/maps/search/?api=1&query=Cerdagne" target="_blank" rel="noopener" data-magnet><span>📍</span><strong>Cerdagne</strong><small>Zone d’intervention</small></a>
+        <a class="cta-tile btn-magnet" href="https://www.google.com/maps/search/?api=1&query=Cerdagne" target="_blank" rel="noopener" data-magnet><span>📍</span><strong>Cerdagne / Capcir</strong><small>Zone d’intervention</small></a>
       </div>
     </div>
   </section>
@@ -212,13 +210,11 @@
   <footer class="footer">
     <div class="container footer__grid">
       <div>
-        <div class="logo footer__logo"><img src="img/logo-cerdagne.png" class="logo__img" alt="Informatique Cerdagne" /></div>
-        <p>© <span id="year"></span> – Tous droits réservés. Site statique ultra-rapide.</p>
+        <p>© <span id="year"></span> – Tous droits réservés.</p>
       </div>
       <nav class="footer__links" aria-label="Liens de pied de page">
         <a data-scrolllink href="#hero" data-magnet>Haut de page</a>
-        <a href="mailto:contact@informatique-cerdagne.fr" data-magnet>Email</a>
-        <a href="tel:+33698998001" data-magnet>Téléphone</a>
+        <a data-scrolllink href="/mentions-legales.pdf" data-magnet>Mentions légales</a>
       </nav>
     </div>
   </footer>
