--- a/index.html
+++ b/index.html
@@ -108,20 +108,21 @@
           Le service informatique à domicile <span class="accent">avec le sourire</span>
         </h1>
         <p class="hero__sub">Amoureux de la relation client, c'est un grand plaisir de vous accompagner !</p>
+        <p class="hero__sub">Ma mission : vous faciliter la vie.</p>
         <div class="cta">
           <a data-scrolllink href="#contact" class="btn btn-primary btn-magnet" data-magnet>Demander un devis</a>
           <a data-scrolllink href="#prestations" class="btn btn-ghost btn-magnet" data-magnet>Voir les prestations</a>
         </div>
-        <p class="hero__credits small">Pour les professionnels & particuliers. Ma mission : vous faciliter la vie.</p>
+        <p class="hero__credits small">Pour les professionnels & particuliers.</p>
       </div>
     </div>
   </header>
 
   <!-- DÉMARCHE -->
   <section id="demarche" class="section demarche container" aria-labelledby="h-demarche">
-    <div class="split">
+    <div class="container">
       <div>
-        <h2 id="h-demarche" data-split>Ma <span class="accent">démarche</span></h2>
+        <h2 id="h-demarche">Ma <span class="accent">démarche</span></h2>
         <p class="lead">Je conçois le service comme une relation humaine : empathie, écoute, patience, persévérance, respect, générosité, soin.</p>
         <p class="lead">Suite à mon intervention, assistance, réparation ou dépannage, je souhaite que vous ayez le sentiment que l’informatique vous facilite la vie et vous aide au quotidien.</p>
         <p class="lead">Je prends le temps de vous expliquer et de vous former afin que vous puissiez vous sentir à l'aise avec l'informatique.</p>
@@ -146,36 +147,35 @@
   <!-- PRESTATIONS -->
   <section id="prestations" class="section prestations" aria-labelledby="h-prestations">
     <div class="container">
-      <h2 id="h-prestations" data-split>Prestations <span class="accent">sur-mesure</span></h2>
-      <p class="lead">Vous ne trouvez une des prestations que vous cherchez ? Cela doit juste être un oubli : Contactez-moi 😉</p>
+      <h2 id="h-prestations">Prestations <span class="accent">sur-mesure</span></h2>
+      <p class="lead">Vous ne trouvez pas une des prestations que vous cherchez ? Cela doit juste être un oubli : Contactez-moi 😉</p>
       <div class="grid-cards">
-        <article class="service" data-magnet><h3>🔧 Dépannage & Optimisation</h3><p>Nettoyage, Diagnostic complet, Branchements divers, Connexions imprimantes & scanners</p></article>
-        <article class="service" data-magnet><h3>🛡️ Sécurité & Sauvegardes</h3><p>Sécurisation Tri de vos fichiers, sauvegardes locales & cloud.</p></article>
-        <article class="service" data-magnet><h3>📦 Installations & Personnalisation</h3><p>Mise en fonction Windows, Linux, macOS - Configuration PC, Tablette, Smartphone</p></article>
-        <article class="service" data-magnet><h3>💡 Conseils & Achat</h3><p>Recommandations sur-mesure pour choisir le matériel adapté à vos besoins</p></article>
-        <article class="service" data-magnet><h3>🖥️ Sites & Visibilité</h3><p>Sites web, référencement local, réseaux sociaux, Stratégie Marketing</p></article>
-        <article class="service" data-magnet><h3>📚 Formation</h3><p>Consulting / Audit - Cours d'initiation, conseils et aide à prise en main à domicile.</p></article>
+        <article class="service" data-magnet><h3>🔧 Dépannage & Optimisation</h3><p>Nettoyage, Diagnostic complet, Branchements divers, Connexions imprimantes & scanners, Optimisation des performances</p></article>
+        <article class="service" data-magnet><h3>🛡️ Sécurité & Sauvegardes</h3><p>Sécurisation, Tri & Transfert de vos fichiers, Récupération de données, Sauvegardes locales & cloud</p></article>
+        <article class="service" data-magnet><h3>📦 Installations & Personnalisation</h3><p>Mise en fonction Windows, Linux, macOS<br>Configuration PC, Tablette, Smartphone</p></article>
+        <article class="service" data-magnet><h3>💡 Conseils & Achat</h3><p>Recommandations sur-mesure pour choisir le matériel adapté à vos besoins. Aucune marge cachée sur la vente (je ne vends que de la prestation), je vous recommande le meilleur rapport/qualité prix & vous dégotte les meilleurs promos du moment.</p></article>
+        <article class="service" data-magnet><h3>🖥️ Sites & Visibilité</h3><p>Sites web, référencement local, réseaux sociaux, Stratégie Marketing & Communication</p></article>
+        <article class="service" data-magnet><h3>📚 Formation</h3><p>Consulting & Audit, Cours d'initiation, conseils et aide à prise en main à domicile.</p></article>
       </div>
     </div>
   </section>
 
   <!-- EXPERTISE -->
   <section id="expertise" class="section expertise container" aria-labelledby="h-expertise">
-    <div class="split reverse">
+    <div class="container">
       <div class="card glow">
         <h3>Expertise</h3>
         <ul class="tick">
           <li data-magnet>Programmation web & applicatives (automatisation des tâches répétitives)</li>
           <li data-magnet>Cybersécurité, Récupération de données & Sauvegardes</li>
-          <li data-magnet>Optimisation des performances & Autonomie</li>
+          <li data-magnet>Optimisation des performances</li>
           <li data-magnet>Spécialiste de la recommandation d'achat désintéressée</li>
-          <li data-magnet>Bonus : Coach Consultant Certifié - Professionnel de l'accompagnement</li>
         </ul>
       </div>
       <div>
-        <h2 id="h-expertise" data-split>Expertise <span class="accent">tech + humaine</span></h2>
-        <p class="lead">Au-delà de la technique, je prends le temps d'écouter, d’expliquer et de rassurer. Objectif : votre autonomie.</p>
-        <div class="chips"><span data-magnet>Transparence</span><span data-magnet>Patience</span><span data-magnet>Clarté</span><span data-magnet>Suivi</span><span data-magnet>Résultats</span></div>
+        <h2 id="h-expertise">Expertise <span class="accent">tech + humaine</span></h2>
+        <p class="lead">Au-delà de la technique, je prends le temps d'écouter, d’expliquer et de rassurer. Vous avez le privilège d'être accompagné par un Coach Consultant Certifié, professionel de l'accompagnement.</p>
+        <div class="chips"><span data-magnet>Transparence</span><span data-magnet>Patience</span><span data-magnet>Clarté</span><span data-magnet>Suivi</span><span data-magnet>Bienveillance</span></div>
       </div>
     </div>
   </section>
@@ -183,7 +183,7 @@
   <!-- AVIS -->
   <section id="avis" class="section avis" aria-labelledby="h-avis">
     <div class="container">
-      <h2 id="h-avis" data-split>Votre satisfaction : <span class="accent">ma plus grande récompense !</span></h2>
+      <h2 id="h-avis">Votre satisfaction : <span class="accent">ma plus grande récompense !</span></h2>
       <p class="lead">Avis Google de mes clients.</p>
       <div class="reviews" aria-live="polite" data-magnet></div>
       <div class="reviews__controls" aria-controls="reviews">
@@ -196,7 +196,7 @@
   <!-- CONTACT -->
   <section id="contact" class="section contact" aria-labelledby="h-contact">
     <div class="container">
-      <h2 id="h-contact" data-split>On démarre ? <span class="accent">J'ai hâte.</span></h2>
+      <h2 id="h-contact">On démarre ? <span class="accent">J'ai hâte.</span></h2>
       <p class="lead">Intervention à domicile & sur rendez-vous exclusivement, conseils et accompagnement sur-mesure.</p>
       <div class="contact__grid">
         <a class="cta-tile btn-magnet" href="tel:+33698998001" data-magnet><span>📞</span><strong>06&nbsp;98&nbsp;99&nbsp;80&nbsp;01</strong><small>Appel direct</small></a>
@@ -218,6 +218,5 @@
       </nav>
     </div>
   </footer>
-
 </body>
 </html>
