--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
   <!-- DÉMARCHE -->
   <section id="demarche" class="section demarche container" aria-labelledby="h-demarche">
-    <div class="container">
+    <div class="split">
       <div>
         <h2 id="h-demarche">Ma <span class="accent">démarche</span></h2>
         <p class="lead">Je conçois le service comme une relation humaine : empathie, écoute, patience, persévérance, respect, générosité, soin.</p>
@@ -162,7 +162,7 @@
 
   <!-- EXPERTISE -->
   <section id="expertise" class="section expertise container" aria-labelledby="h-expertise">
-    <div class="container">
+    <div class="split reverse">
       <div class="card glow">
         <h3>Expertise</h3>
         <ul class="tick">
