--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <article class="service" data-magnet><h3>🔧 Dépannage & Optimisation</h3><p>Nettoyage, Diagnostic complet, Branchements divers, Connexions imprimantes & scanners, Optimisation des performances</p></article>
         <article class="service" data-magnet><h3>🛡️ Sécurité & Sauvegardes</h3><p>Sécurisation, Tri & Transfert de vos fichiers, Récupération de données, Sauvegardes locales & cloud</p></article>
         <article class="service" data-magnet><h3>📦 Installations & Personnalisation</h3><p>Mise en fonction Windows, Linux, macOS<br>Configuration PC, Tablette, Smartphone</p></article>
-        <article class="service" data-magnet><h3>💡 Conseils & Achat</h3><p>Recommandations sur-mesure pour choisir le matériel adapté à vos besoins. Aucune marge cachée sur la vente (je ne vends que de la prestation), je vous recommande le meilleur rapport/qualité prix & vous dégotte les meilleurs promos du moment.</p></article>
+        <article class="service" data-magnet><h3>💡 Conseils & Achat</h3><p>Recommandations d'achat sur-mesure. Pas de vente, pas de marge cachée : je vous recommande le meilleur rapport qualité/prix & les meilleurs promos du moment.</p></article>
         <article class="service" data-magnet><h3>🖥️ Sites & Visibilité</h3><p>Sites web, référencement local, réseaux sociaux, Stratégie Marketing & Communication</p></article>
         <article class="service" data-magnet><h3>📚 Formation</h3><p>Consulting & Audit, Cours d'initiation, conseils et aide à prise en main à domicile.</p></article>
       </div>
@@ -174,7 +174,8 @@
       </div>
       <div>
         <h2 id="h-expertise">Expertise <span class="accent">tech + humaine</span></h2>
-        <p class="lead">Au-delà de la technique, je prends le temps d'écouter, d’expliquer et de rassurer. Vous avez le privilège d'être accompagné par un Coach Consultant Certifié, professionel de l'accompagnement.</p>
+        <p class="lead">Au-delà de la technique, je prends le temps d'écouter, d’expliquer et de rassurer.</p>
+        <p class="lead">Professionel de l'accompagnement, je suis également certifié Coach Consultant RNCP 7</p>
         <div class="chips"><span data-magnet>Transparence</span><span data-magnet>Patience</span><span data-magnet>Clarté</span><span data-magnet>Suivi</span><span data-magnet>Bienveillance</span></div>
       </div>
     </div>
